[gd_scene load_steps=7 format=3 uid="uid://0qvgj6wuh5wq"]

[ext_resource type="Script" path="res://scripts/gecko.gd" id="1_v0gus"]
[ext_resource type="Texture2D" uid="uid://dxetvrsympjhf" path="res://assets/sprites/gecko/gecko_base_spritesheet.png" id="2_yxl8w"]
[ext_resource type="Texture2D" uid="uid://dwawn2lpmfr4j" path="res://assets/sprites/gecko/gecko_eye_spritesheet.png" id="3_el9oh"]
[ext_resource type="Texture2D" uid="uid://cx5ul4b5o53h" path="res://assets/sprites/gecko/gecko_tail_spritesheet.png" id="4_0ar0a"]
[ext_resource type="Texture2D" uid="uid://d1h5rhorkdfyy" path="res://assets/sprites/gecko/gecko_spots_spritesheet.png" id="5_7k7td"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w66pg"]
size = Vector2(140, 90)

[node name="Gecko" type="Node2D"]
script = ExtResource("1_v0gus")

[node name="CompositeSprite" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Body" type="Sprite2D" parent="CompositeSprite"]
unique_name_in_owner = true
texture = ExtResource("2_yxl8w")
hframes = 4

[node name="Eyes" type="Sprite2D" parent="CompositeSprite"]
unique_name_in_owner = true
texture = ExtResource("3_el9oh")
hframes = 4

[node name="Tail" type="Sprite2D" parent="CompositeSprite"]
unique_name_in_owner = true
texture = ExtResource("4_0ar0a")
hframes = 4

[node name="Spots" type="Sprite2D" parent="CompositeSprite"]
unique_name_in_owner = true
texture = ExtResource("5_7k7td")
hframes = 4

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
position = Vector2(0, -60)
horizontal_alignment = 1
size_flags_horizontal = 4
text = "Gecko"

[node name="AnimationTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.25
autostart = true

[node name="ClickArea" type="Area2D" parent="."]
unique_name_in_owner = true
input_pickable = true
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource("RectangleShape2D_w66pg")
